--- a/districts.html
+++ b/districts.html
@@ -11,12 +11,31 @@
 </head>
 <body>
 
-                <nav class="navbar bg-body-tertiary">
-                    <div class="container-fluid">
-                      <span class="navbar-brand mb-0 h1">Districts</span>
-                    </div>
+  <nav class="navbar bg-success">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo.jpg" alt="Logo" width="110" height="50" class="img-thumbnail-d-inline-block align-text-top">
+             </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" aria-current="page" href="index.html"><b>Home</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" href="signin.html"><b>Sign in</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" href="signup.html"><b>Sign up</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" href="districts.html"><b>Districts</b></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link link-light" href="Contacts.html"><b>Contacts</b></a>
+            </li>
+        </ul>
+    </div>
+</nav>
             <div class="container">
-                  </nav>
                 <div class="container text-center">
                     <div class="row mt-3">
                       <div class="col">
@@ -25,7 +44,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Ernakulam</h5>
                                 <p class="card-text">Ernakulam is the central business district of Kochi, Kerala, India. It's the eastern part of the mainland of Kochi city. The name "Ernakulam" comes from the name of the famous Ernakulathappan Temple, a temple dedicated to Lord Shiva</p>
-                                <a href="#" class="btn btn-primary">Visit</a>
+                                <a href="EKM.html" class="btn btn-primary">Visit</a>
                             </div>
                             </div>
                       </div>
@@ -35,7 +54,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Thiruvananthapuram</h5>
                                 <p class="card-text">Thiruvananthapuram is the capital of Kerala state in southwestern India. It's located on the Arabian Sea, on the west coast of India, near the southern tip of the mainland.<br /><br /></p>
-                                <a href="#" class="btn btn-primary">Visit</a>
+                                <a href="TVM.html" class="btn btn-primary">Visit</a>
                             </div>
                             </div>
                       </div>
@@ -45,7 +64,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Kozhikode</h5>
                                     <p class="card-text">Kozhikode, also known as Calicut, is a district and city in the Indian state of Kerala. It's located on the Malabar Coast and is the fashion capital of Kerala.<br/><br/> </p>
-                                    <a href="#" class="btn btn-primary">Visit</a>
+                                    <a href="KOZHI.html" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                       </div>
@@ -57,7 +76,7 @@
                             <div class="card-body">
                                 <h5 class="card-title">Thrissur</h5>
                                 <p class="card-text">Thrissur is a commercial and cultural center in Kerala, India. It's known as the cultural capital of Kerala and the land of Poorams. The city is home to over 10% of Kerala's population and is known for its ancient temples, churches, and mosques.</p>
-                                <a href="#" class="btn btn-primary">Visit</a>
+                                <a href="TRIS.html" class="btn btn-primary">Visit</a>
                             </div>
                             </div>
                         </div>
@@ -67,28 +86,28 @@
                             <div class="card-body">
                                 <h5 class="card-title">Idukki</h5>
                                 <p class="card-text">Idukki is a district in the Indian state of Kerala. It is located in the Western Ghats in the southwest of the country. Idukki is the second largest district in Kerala by area but has the lowest population density.It is known for its dense forests and mountainous hills.</p>
-                                <a href="#" class="btn btn-primary">Visit</a>
+                                <a href="IDU.html" class="btn btn-primary">Visit</a>
                             </div>
                             </div>
                         </div>
                         <div class="col">
                           <div class="card" style="width: 18rem;">
-                                <img src="images/kol.jpg" class="card-img-top" alt="...">
-                                <div class="card-body">
-                                    <h5 class="card-title">Kollam</h5>
-                                    <p class="card-text">Kollam is a district in Kerala, India. It is located on the southwest coast of the state, 70 kilometers north of Thiruvananthapuram, the state capital. The district is 2,491 square kilometers, making up 6.48% of the state's total area.<br /><br /><br/></p>
-                                    <a href="#" class="btn btn-primary">Visit</a>
+                            <img src="images/ala.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                              <h5 class="card-title">Alappuzha</h5>
+                              <p class="card-text">Alappuzha is a district in Kerala, India, known for its beaches, boat races, and backwaters. It's also known as the "Venetian Capital" of Kerala and the "Venice of the East".<br/><br/><br/><br/></p>
+                              <a href="ALA.html" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                         </div>
                       </div>
-                        <div class="row mt-3">
-                          <div class="col">
-                            <div class="card" style="width: 18rem;">
-                                <img src="images/ala.jpg" class="card-img-top" alt="...">
+                      <div class="row mt-3">
+                        <div class="col">
+                          <div class="card" style="width: 18rem;">
+                                <img src="images/kol.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Alappuzha</h5>
-                                    <p class="card-text">Alappuzha is a district in Kerala, India, known for its beaches, boat races, and backwaters. It's also known as the "Venetian Capital" of Kerala and the "Venice of the East".<br/><br/><br/></p>
+                                    <h5 class="card-title">Kollam</h5>
+                                    <p class="card-text">Kollam is a district in Kerala, India. It is located on the southwest coast of the state, 70 kilometers north of Thiruvananthapuram, the state capital. The district is 2,491 square kilometers, making up 6.48% of the state's total area.<br /><br /></p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
@@ -105,10 +124,11 @@
                           </div>
                           <div class="col">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/mal.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Malappuram</h5>
+                                    <p class="card-text">Malappuram is a city and the headquarters of the Malappuram district in Kerala, India. It is the fourth largest urban agglomeration in Kerala and the 20th largest in India.<br /><br /> <br />
+                                    </p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
@@ -118,53 +138,53 @@
                         <div class="row mt-3">
                           <div class="col">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/kas.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Kasaragod</h5>
+                                    <p class="card-text">Kasaragod is the northernmost district in Kerala. It's known as the "land of gods" because of its cultural uniqueness, rich history, and many temples, mosques, and churches.</p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                           </div>
                           <div class="col">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/pat.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Pathanamthitta</h5>
+                                    <p class="card-text">Pathanamthitta is a district in Kerala, India. It's located in the Central Travancore region, at the base of the Western Ghats.<br /><br /><br /><br /></p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                           </div>
                           <div class="col">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/kot.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Kottayam</h5>
+                                    <p class="card-text">Kottayam is a city in central Kerala, India. It is the administrative capital of the Kottayam district. The name Kottayam literally means "the interior of a fort".</p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                           </div>
                         </div>
                       
-                        <div class="row mt-3 ">
+                        <div class="row mt-3 mb-3 mx-auto">
                           <div class="col">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/pal.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Palakkad</h5>
+                                    <p class="card-text">Palakkad is a city in the southern Indian state of Kerala. It's also known as Palghat, which is an anglicized version of the local name. Palakkad is famous for its ancient Palakkad Fort, which was captured and rebuilt by Hyder Ali in 1766.</p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
                           </div>
                           <div class="col ">
                             <div class="card" style="width: 18rem;">
-                                <img src="..." class="card-img-top" alt="...">
+                                <img src="images/way.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <h5 class="card-title">Wayanad</h5>
+                                    <p class="card-text">Wayanad is a district in Kerala, India. It's located in the northeast part of the state, on a mountainous plateau in the Western Ghats. Wayanad is known for its natural beauty, including mountains, dense forests, plantations, and tribal population.<br/></p>
                                     <a href="#" class="btn btn-primary">Visit</a>
                                 </div>
                             </div>
