--- a/signin.html
+++ b/signin.html
@@ -9,30 +9,47 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body>
+  <nav class="navbar bg-success">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+            <img src="images/logo.jpg" alt="Logo" width="110" height="50" class="img-thumbnail-d-inline-block align-text-top">
+             </a>
+        <ul class="nav justify-content-end">
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" aria-current="page" href="index.html"><b>Home</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" href="signin.html"><b>Sign in</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" href="signup.html"><b>Sign up</b></a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link link-light" target="_self" href="districts.html"><b>Districts</b></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link link-light" href="Contacts.html"><b>Contacts</b></a>
+            </li>
+        </ul>
+    </div>
+</nav>
     <div class="container">
         <center>
-            <div class="card text-bg-primary p-3 w-50 ">
+            <div class="card text-bg-success p-3 w-50 ">
                 <div class="card-body">
-                    <nav class="navbar bg-body-tertiary">
-                        <div class="container-fluid ">
-                          <span class="navbar-brand mb-0 h1">Sign In</span>
-                        </div>
-                      </nav>
                     <form>
                         <div class="mb-3">
                           <label for="exampleInputEmail1" class="form-label">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                          <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                        </div>
+                          <input type="email" placeholder="Enter your email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                         <div class="mb-3">
-                          <label for="exampleInputPassword1" class="form-label">Password</label>
-                          <input type="password" class="form-control" id="exampleInputPassword1">
+                          <label for="exampleInputPassword1" plclass="form-label">Password</label>
+                          <input type="password" placeholder="Enter your password" class="form-control" id="exampleInputPassword1">
                         </div>
                         <div class="mb-3 form-check">
                           <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                          <label class="form-check-label" for="exampleCheck1">show password</label>
                         </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                        <button type="submit" class="btn btn-primary">Sign in</button>
                       </form>
     
                 </div>
