--- a/districts.html
+++ b/districts.html
@@ -13,7 +13,7 @@
 
   <nav class="navbar bg-success">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
             <img src="images/logo.jpg" alt="Logo" width="110" height="50" class="img-thumbnail-d-inline-block align-text-top">
              </a>
         <ul class="nav justify-content-end">
