--- a/Contacts.html
+++ b/Contacts.html
@@ -32,15 +32,23 @@
             </ul>
         </div>
     </nav>
-    <div class="container mt-5">
-        <div class="card mx-auto w-50" style="width: 18rem;">
+    <div class="container mt-2">
+        <div class="card mx-auto w-50 h-50" style="width: 18rem;">
             <div class="card-body ">
               <h1 class="card-title">CONTACT US<br/></h1>
               <h6 class="card-subtitle mb-2 text-body-secondary">Phone no : 9090909090</h6>
               <h6 class="card-subtitle mb-2 text-body-secondary">Email : keralatours@gmail.com</h6>
               <h6 class="card-subtitle mb-2 text-body-secondary">Landline no : 0484-238-4585</h6>
-              <p class="card-text"></p>
-              <a href="https://maps.app.goo.gl/Z1DQjnh2cU5wWbLg8" target="_blank" class="card-link">Map Link</a>
+              <div class="row w-100">
+                <div class="col-lg-6 my-4">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3867.734074227449!2d76.35803810733937!3d10.055876488030634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b080c06efa7bdb7%3A0x9be2086002345b27!2sNeST%20Electronics%20City%20%2F%20NeST%20Hitek%20Park!5e0!3m2!1sen!2sin!4v1707278396134!5m2!1sen!2sin" width="600" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+                <div class="col-lg-6 my-4 d-flex align-items-center">
+                  <div>
+                    
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
       </div>
