--- a/ALA.html
+++ b/ALA.html
@@ -37,6 +37,7 @@
             </div>
         </nav>
         <div class="container">
+            <center>
             <div class="card mt-4 mb-4" style="width: 65rem;">
                 <div class="card-body">
                     <h5 class="card-title">Alappuzha</h1>
@@ -48,6 +49,7 @@
                     <p>Pandavan Rock derived its name from Pandavas, the five famous brothers in Mahabharata. It is believed that Pandavas stayed inside the cave during their exile. The walk till the rock is quite interesting and it is an amazing place to spend time with family. The stunning view of hills and forests surrounding the rock serve as the perfect backdrop for photography.</p>
                 </div>
             </div>
+        </center>
         </div>
     </div>
 
