--- a/IDU.html
+++ b/IDU.html
@@ -37,6 +37,7 @@
             </div>
         </nav>
         <div class="container">
+            <center>
             <div class="card mt-4 mb-4" style="width: 65rem;">
                 <div class="card-body">
                     <h5 class="card-title">Idukki</h1>
@@ -47,6 +48,7 @@
                     <p>Ilaveezha Poonchira is a lovely valley spread across thousands of acres of land at the foot of three hillocks – Mannakunnu, Kudayathoor Hill, and Thonippara near Kanjar. Known as one of the best Idukki destinations among all the popular places, Ilaveezha Poonchira is an ideal place for trekking and offers breathtaking views of sunrise and sunset..</p>
                 </div>
             </div>
+        </center>
         </div>
     </div>
 
