--- a/KOZHI.html
+++ b/KOZHI.html
@@ -37,6 +37,7 @@
             </div>
         </nav>
         <div class="container">
+            <center>
             <div class="card mt-4 mb-4" style="width: 65rem;">
                 <div class="card-body">
                     <h5 class="card-title">Kozhikode</h1>
@@ -47,6 +48,7 @@
                     <p>A veritable treasure trove for historians and connoisseurs of art, the Pazhassi Raja Museum is located in Kozhikode. The Pazhassi Raja Museum & Art Gallery adjacent to the museum displays the acclaimed paintings of Kerala’s cherished artists, Raja Ravi Varma (1848 – 1906) whose works brought international repute to the State and his uncle Raja Raja Varma.</p>
                 </div>
             </div>
+        </center>
         </div>
     </div>
 
