--- a/TRIS.html
+++ b/TRIS.html
@@ -37,6 +37,7 @@
             </div>
         </nav>
         <div class="container">
+        <center>
             <div class="card mt-4 mb-4" style="width: 65rem;">
                 <div class="card-body">
                     <h5 class="card-title">Thrissur</h1>
@@ -47,6 +48,7 @@
                     </p>
                 </div>
             </div>
+        </center>
         </div>
     </div>
 
