--- a/TVM.html
+++ b/TVM.html
@@ -37,7 +37,8 @@
             </div>
         </nav>
         <div class="container">
-            <div class="card mt-4 mb-4" style="width: 65rem;">
+            <center>
+            <div class="card mt-4 mb-4 git" style="width: 65rem;">
                 <div class="card-body">
                     <h5 class="card-title">Thiruvananthapuram</h1>
                     <!-- <h6 class="card-subtitle mb-2 text-body-secondary">Card subtitle</h6> -->
@@ -47,6 +48,7 @@
                     </p>
                 </div>
             </div>
+        </center>
         </div>
     </div>
 
